--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <title>Hello World</title>
     </head>
     <body>
-    <h1> Bhushan First</h1>
+    <h1> Bhushan Second</h1>
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
