--- a/index.html
+++ b/index.html
@@ -36,12 +36,9 @@
         <title>Hello World</title>
     </head>
     <body>
-<<<<<<< HEAD
-    <h1> Bhushan Tiwari Season</h1>
-    <h1> Bhushan Tiwari More</h1>
-=======
-    <h1> Bhushan Tiwari four</h1>
->>>>>>> origin
+
+    <h1>Hola</h1>
+
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
